# juniper-rocket-sample

./: .env  Cargo.toml  Makefile.toml  Procfile  README.md  docker-compose.yml
migrations/2019-11-29-222100_create_videos/: up.sql
src/: main.rs  schema.rs
src/graphql/: handler.rs  schema.rs
src/util/: s3.rs
src/video/: decorator.rs  entity.rs  mod.rs  model.rs
