[package]
name = "juniper-rocket-sample"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
diesel = { version = "*", features = ["postgres", "chrono", "r2d2"] }
juniper = "*"
juniper_rocket = "*"
rocket = "*"
rocket_cors = "*"
rusoto_core = "*"
rusoto_s3 = "*"

[dev-dependencies]
cargo-husky = { version = "*", default-features = false, features = ["user-hooks"] }
